cmake_minimum_required(VERSION 3.19)
if (WIN32)
    set (SYSLIB ws2_32.lib)
    set(CMAKE_MAKE_PROGRAM "C:/Program Files/CodeBlocks/MinGW/bin/make")   
elseif (UNIX)
    set (SYSLIB pthread)
endif()
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAEK_CXX_FLAGS -Wall ${CMAEK_CXX_FLAGS})
project(WakeOnLan)
aux_source_directory(. SRC)
find_package(Boost COMPONENTS system REQUIRED)
FILE(WRITE ${CMAKE_BINARY_DIR}/conf.txt "mac=\nport=")
add_library(configure_util configure_util.cpp)
add_library(network_watch network_watch.cpp)
add_library(wake_on_lan wake_on_lan.cpp)
add_executable(main main.cpp)
add_executable(receive receive.cpp)
add_executable(send send.cpp)
target_link_libraries(network_watch PRIVATE ${SYSLIB} PRIVATE boost_system)
target_link_libraries(wake_on_lan PRIVATE ${SYSLIB} PRIVATE boost_system)
target_include_directories(network_watch PRIVATE ${Boost_INCLUDE_DIRS})
target_include_directories(wake_on_lan PRIVATE ${Boost_INCLUDE_DIRS})
target_link_directories(network_watch PRIVATE ${Boost_LIBRARY_DIRS})
target_link_directories(wake_on_lan PRIVATE ${Boost_LIBRARY_DIRS})
target_link_libraries(receive PRIVATE configure_util PRIVATE network_watch)
target_link_libraries(send PRIVATE configure_util PRIVATE wake_on_lan)
target_link_libraries(main PRIVATE configure_util PRIVATE wake_on_lan PRIVATE network_watch)
target_link_libraries(main PRIVATE ${SYSLIB})